<resources>
    <string name="app_name">Waste Master</string>
    <string name="tw_id">Waste Master</string>
    <string name="bt_id1">CLEANING OFFICER</string>
    <string name="bt_id2">ROUTE MANAGEMENT</string>
    <string name="bt_id3">MANAGE GARBAGE</string>
    <string name="btact_id1">CREAT BIN</string>
    <string name="btact_id2">CREATE DRIVER</string>
    <string name="btact_id3">USER DETAILS</string>
    <string name="bin_id">Create Bin</string>
    <string name="tx_name">City</string>
    <string name="tx2_name">Lord Type</string>
    <string name="tx3_name">Cleaning Period</string>
    <string name="te_loca">Select Location / Add Route Map</string>
    <string name="btn_select">Select</string>
    <string name="btn_sub">SUBMIT</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_dele">DELETE</string>
    <string name="btact_id4">WORK REPORTS</string>
    <string name="route_id">Route Management</string>
    <string name="work_id">Work Reports</string>
    <string name="btn_view">View Complants</string>
    <string name="manage_id">Manage Garbage</string>
    <string name="location">Location</string>
    <string name="work_report">Work Reports</string>
    <string name="date">Date</string>
    <string name="workreport1">Number of Complaint</string>
    <string name="workreport2">Total Collection Containers</string>
    <string name="workreport3">Total Filled Containers</string>
    <string name="workreport4">Pending Customer Complaint</string>
    <string name="btnnewadd">Add New Work</string>
    <string name="btnupdate">Update Work</string>
    <string name="editworkreport">Edit Work Reports</string>
    <string name="edit_date">Date</string>
    <string name="search">Search Date</string>
    <string name="editNameone">Number of Complaint</string>
    <string name="editNametwo">Total Collection Containers</string>
    <string name="editNametree">Total Filled Containers</string>
    <string name="editNamefour">Pending Customer Complaint</string>
    <string name="editbin">Update Work Reports</string>
    <string name="deletebin">Delete Work Reports</string>
</resources>